force-app/main/default/objects/Api_Logger__c/Api_Logger__c.object-meta.xml
<CustomObject>
    <label>Api Logger</label>
    <nameField>
        <label>Api Logger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Api Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>