force-app/main/default/objects/Api_Logger__c/fields/DML__c.field-meta.xml
<CustomField>
    <fullName>DML__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DML</label>
    <type>Checkbox</type>
</CustomField>