force-app/main/default/objects/Api_Logger__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>